--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ span.glyphicon.glyphicon-envelope, span.glyphicon.glyphicon-earphone {
 .logo {
 	width: 50%;
 	float: left;
-	font-family: 'calibri', serif;  /*'Kadwa', serif;....*/
+	font-family: 'Calibri', serif;  /*'Kadwa', serif;....*/
 }
 .logo a {
 	font-size: 30px;
